@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="unalignedOpenBrackets" VALUE="["/>
+		<PROPERTY NAME="unalignedCloseBrackets" VALUE="]"/>
+		<PROPERTY NAME="commentStart" VALUE="&quot;"/>
+		<PROPERTY NAME="commentEnd" VALUE="&quot;"/>
+	</PROPS>
+	<RULES IGNORE_CASE="FALSE" ESCAPE="\"
+		HIGHLIGHT_DIGITS="TRUE" DIGIT_RE="-?\d+([./]\d+)?">
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+
+		<MARK_FOLLOWING TYPE="LITERAL2">#</MARK_FOLLOWING>
+		
+		<SPAN TYPE="MARKUP">
+			<BEGIN>@(</BEGIN>
+			<END>)</END>
+		</SPAN>
+		
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+		
+		<SPAN TYPE="KEYWORD1">
+			<BEGIN>|</BEGIN>
+			<END>|</END>
+		</SPAN>
+
+		<MARK_FOLLOWING TYPE="LITERAL4">&amp;</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="KEYWORD2">`</MARK_FOLLOWING>
+		
+		<MARK_FOLLOWING TYPE="LITERAL3">$\</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="LITERAL3">$</MARK_FOLLOWING>
+		
+		<SEQ TYPE="OPERATOR">[</SEQ>
+		<SEQ TYPE="OPERATOR">]</SEQ>
+		<SEQ TYPE="OPERATOR">{</SEQ>
+		<SEQ TYPE="OPERATOR">}</SEQ>
+	</RULES>
+</MODE>
